--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -14,9 +14,11 @@
     "no-shadow": "off",
     "no-param-reassign": "off",
     "eol-last": "off",
-    "import/extensions": [ 1, {
-      "js": "always", "json": "always"
-    }]
+    "import/extensions": [1, {
+      "js": "always",
+      "json": "always"
+    }],
+    "camelcase": "off"
   },
   "ignorePatterns": [
     "dist/",
